--- a/www/core/views/landing.client.view.html
+++ b/www/core/views/landing.client.view.html
@@ -1,6 +1,6 @@
 <section>
     <div class='landing-page' landing-page>
         <img src="./core/img/landing.gif"></img>
-        <div class='landing-begin' ng-click='letTheGameBegin()'>BEGIN -></div>
+        <div class='landing-begin' ng-click='letTheGameBegin()'><img src="./core/img/begin-button.png" style="width: 120px;" /></div>
     </div>
 </section>
