--- a/platforms/android/assets/www/core/views/home.client.view.html
+++ b/platforms/android/assets/www/core/views/home.client.view.html
@@ -1,12 +1,10 @@
 <section data-ng-controller="RecordController">
 
-	<div class='main-window ng-hide' ng-show='authentication.user && !apologyUploaded'>
-    	<div class='goback-to-record' ng-click="goTo('/launch')"><</div>
-        
-    	<p class='apology-header'>{{ apologyHeader }}</p>
+	<div class='main-window ng-hide' ng-show='authentication.user && !apologyUploaded' style="padding-top: 10px;">
+    	<div class='goback-to-record' ng-click="goTo('/launch')"><span class="arrow"><</span></div>
+    	<p class='apology-header g-font b page-title'>{{ apologyHeader }}</p>
     	<div style="margin-top: 10px;margin-bottom: 20px;text-align: center;" ng-show='!apologyStarted'><img src="./core/img/log.png" style="width: 60px;" /></div>
-		<p class='main-page-text' ng-show='!apologyStarted' style="padding-left: 50px;padding-right: 50px;">Think about who you want to apologize to, then hold the record button and we will guide you through a sensational apology.</p>
-		<p class='main-page-subtext' ng-show='!apologyStarted' style="padding-left: 50px;padding-right: 50px;">When finished, choose who you want to recieve your words.</p>
+		<p class='main-page-text a-font' ng-show='!apologyStarted' style="padding-left: 50px;padding-right: 50px; font-size: 17px">Think about who you want to apologize to, then tap the record button and we will guide you through a sensational apology.<br><br>When finished, choose who you want to recieve your words.</p>
 
 		<p class='apology-title' ng-show='apologyStarted'>{{ apologyTitle }}</p>
 
@@ -31,8 +29,8 @@
 			</div> -->
 			
 		</div>
-		<div class='apology-footer' ng-click="goTo('/radio')" ng-show='!apologyStarted'>
-            TUNE INTO APOLOGY.FM <img src="./core/img/phones.png" style="width: 20px;vertical-align: top;" />
+		<div class='apology-footer g-font b' ng-click="goTo('/radio')" ng-show='!apologyStarted'>
+            TUNE INTO APOLOGY.FM <img src="./core/img/phones.png" style="width: 20px;vertical-align: inherit; margin-left: 15px" />
         </div>
 	</div>
 </section>
