--- a/platforms/android/assets/www/core/views/playback.client.view.html
+++ b/platforms/android/assets/www/core/views/playback.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="PlaybackController">
 	<div class="col-md-12">
-		<h1>My Apologyes</h1>
+		<h1>My Apologies</h1>
 		<ul>
 			<li>
 				<div data-ng-repeat="apology in apologies" data-ng-href="#!/apology/{{apology._id}}" class="list-group-item">
