--- a/platforms/android/assets/www/core/views/player.client.view.html
+++ b/platforms/android/assets/www/core/views/player.client.view.html
@@ -1,28 +1,26 @@
 <section>
-    <div class='main-window'>
-        <div class='your-inbox' ng-click='player.goTo("apoloinbox")'>
-            your inbox
-        </div>
-
-        <p class='apology-header'>{{ player.currentApology.senderPhoneNumber }}</p>
+    <div class='main-window' style="padding-top: 40px;">
         
-        <p class='apology-title'>{{ player.currentApology.sent | date:'medium' }}</p>
+        <div class='goback-to-record' style="margin-right: 30px;" ng-click="player.goTo('launch')"><</div>
+            
+        <div style="padding-bottom: 35px;padding-top: 10px;text-align: center;">
+            <img src="./core/img/Apology.gif" width="250px" />
+        </div>
         
         <div class='apology-prbar'>
-        {{ player.timePlayed | number:0 }}
-        </div>
-        
-        
-        <div class='record-button-cont'>
+            <div class='prbar' style='width:{{ player.prBarWidth }}%'></div>
+            <div class='prbar-ghost'></div>
+            <p class='time-zero'>{{ player.timePlayed | time }}</p>
+            <p class='time-remaining'>{{ player.duration | time }}</p> 
+        </div>   
+
+        <div class='review-button-cont'>
             <div ng-show='player.isPlaying' ng-click='player.pause()' class='pause-button'>
                 <img src="./core/img/pause.png" alt="">
             </div>
             <div ng-hide='player.isPlaying' ng-click='player.play()' class='pause-button'>
-                <img src="./core/img/play.png" alt="">
+                <img src="./core/img/play-arrow.png" alt="">
             </div>
-        </div>
-        <div class='apology-footer' ng-click='player.goTo("record")'>
-            RECORD AN APOLOGY
         </div>
     </div>
 </section>
