--- a/www/core/views/aftersent.client.view.html
+++ b/www/core/views/aftersent.client.view.html
@@ -1,10 +1,10 @@
 <section data-ng-controller="AfterSentController">
 	 <div class='main-window'>
 		<p class='apology-header'>apology sent!</p>
-
-		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;margin-top: 30px;">Record another apology</div>
-        <div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;margin-top: 30px;">home</div>
-		<div class='apology-footer'>
+		<div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">tune into apology radio</div>
+		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">Record another apology</div>
+        <div ng-click="goTo('/launch')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">home</div>
+		<div ng-click="share()" class='apology-footer'>
             SHARE APP
         </div>
      </div>
