--- a/www/core/views/apolooutbox.client.view.html
+++ b/www/core/views/apolooutbox.client.view.html
@@ -1,37 +1,37 @@
 <section data-ng-controller="OutboxApolCtrl">
     <div class='main-window' style="padding-top: 40px;">
-        <div class='goback-to-record' ng-click="goTo('/radio')"><</div>
-        <div><center><h4>YOUR APOLOGIES</h4></center></div>
+        <div class='goback-to-record' ng-click="goTo('/radio')"><span class="arrow"><</span></div>
+        <div><center><h4 class="g-font b page-title">YOUR APOLOGIES</h4></center></div>
         <div class="row" style="padding-top: 30px;margin-right: 0px;margin-left: 0px;padding-bottom: 30px;">
             <div style="padding: 0px;margin: 0px;padding-left: 30px;" class="col-xs-6">
-                <div ng-click='goTo("/apoloinbox")' style="padding: 10px;padding-left:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-left-radius: 25px;border-top-left-radius: 25px;width: 100%;background-color: transparent;">
+                <div ng-click='goTo("/apoloinbox")' style="padding: 7px;padding-left:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-left-radius: 25px;border-top-left-radius: 25px;width: 100%;background-color: transparent;">
                     INBOX
                 </div>
             </div>
             <div style="padding: 0px;margin: 0px;padding-right: 30px;" class="col-xs-6">
-                <div style="padding: 10px;padding-right:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-right-radius: 25px;border-top-right-radius: 25px;width: 100%;background-color: white;color: #A7B9C2;text-align: right;">
+                <div style="padding: 7px;padding-right:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-right-radius: 25px;border-top-right-radius: 25px;width: 100%;background-color: white;color: #5b5557;text-align: right;">
                     OUTBOX
                 </div>
             </div>
         </div>
-        <div style="height: 60%;overflow-y: auto;">
+        <div style="height: 60%;overflow-y: auto; padding: 0 30px;">
             <div ng-repeat='apology in apologies' style="padding: 20px;">
-                <div style="border: 1px solid white;border-top: 0px;border-right: 0px;border-left: 0px;" class="row">
+                <div style="border: 1px solid white;border-top: 0px;border-right: 0px;border-left: 0px;padding-bottom: 20px;" class="row">
                   <div class="col-xs-5">
-                      <span>TO</span><br/>
-                      <span>{{ apology.receiverPhoneNumber }}</span>
+                      <span class="box-title g-font b">TO</span><br/>
+                      <span class="a-font b">{{ apology.receiverPhoneNumber }}</span>
                   </div>
                   <div class="col-xs-5">
-                      <span>SENT</span><br/>
-                      <span>{{ apology.sent | date:'MMM d, yyyy' }}</span>
+                      <span class="box-title g-font b">SENT</span><br/>
+                      <span class="a-font b">{{ apology.sent | date:'MMM d, yyyy' }}</span>
                   </div>
                   <div class="col-xs-2">
-                      <span><a ng-href="#!/player/{{apology._id}}"><img src="./core/img/play.png" width="30px" /></a></span>
+                      <span><a ng-href="#!/player/{{apology._id}}"><img src="./core/img/play.png" width="23px" /></a></span>
                   </div>
                 </div>
             </div>
         </div>
-        <div class='apology-footer' ng-click='goTo("/signin")'>
+        <div class='apology-footer g-font b' ng-click='goTo("/signin")'>
             RECORD AN APOLOGY
         </div>
     </div>        
