--- a/www/core/views/reviewapology.client.view.html
+++ b/www/core/views/reviewapology.client.view.html
@@ -4,14 +4,14 @@
 		<p class='apology-header'>review your apology</p>
 		<div class='goback-to-record' ng-click="goBackToHome()"><</div>
 
-		<p class='main-page-text' style="padding-left: 50px;padding-right: 50px;">You apology has been recorded. Does it sounds good?</p>
+		<p class='main-page-text' style="padding-left: 50px;padding-right: 50px;">Your apology has been recorded. Does it sounds good?</p>
 
 		<div class='apology-prbar'>
 			<div class='prbar' style='width:{{ prBarWidth }}%'></div>
 			<div class='prbar-ghost'></div>
-			<p class='time-zero'>0</p>
-			<p class='time-remaining' ng-show='!stopPlay'>-{{ apologyTimer }}</p>	
-			<p class='time-remaining' ng-show='stopPlay'>-30</p>	
+			<p class='time-zero'>{{ timePlayed | time }}</p>
+			<p class='time-remaining'>{{ duration | time }}</p>	
+			<!--<p class='time-remaining' ng-show='!stopPlay'>:30</p>-->	
 		</div>
 
 <!-- 		<audio controls>
@@ -24,7 +24,7 @@
 				<img src="./core/img/pause.png" alt="">
 			</div>
 			<div ng-show='!apologyStarted || apologyStarted&&apologyPaused' ng-click='playMedia()' class='pause-button'>
-				<img src="./core/img/play.png" alt="">
+				<img src="./core/img/play-arrow.png" alt="">
 			</div>
 		</div>
 		<center>
@@ -32,7 +32,11 @@
           If you like it, choose personal<br/>contacts to share with.  
         </p>
         </center>    
-		<div ng-click="chooseRecipient()" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;">Choose recipient</div>
+		<div ng-click="chooseRecipient()" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;text-transform: uppercase;">Choose recipient</div>
+	<br>
+		<!-- upload anonamously so it just goes to server and doesn't send to anyone. it just plays on the radio-->
+		<div ng-click="goBackToHome()" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px; text-transform: uppercase;">upload anonymously</div>
+
 		<div style="margin-top: 20px;text-align: center;" ng-click="goTo('/signin')" >OR, START OVER</div>
 	</div>
 </section>
