--- a/platforms/android/assets/www/core/views/reviewapology.client.view.html
+++ b/platforms/android/assets/www/core/views/reviewapology.client.view.html
@@ -2,9 +2,8 @@
 	<!-- <div class='main-window'> -->
 	<div class='main-window ng-hide' ng-show='authentication.user'>
 		<p class='apology-header'>review your apology</p>
-		<div class='goback-to-record' ng-click="goBackToHome()"><</div>
 
-		<p class='main-page-text' style="padding-left: 50px;padding-right: 50px;">Your apology has been recorded. Does it sounds good?</p>
+		<p class='main-page-text' style="padding-left: 50px;padding-right: 50px;">Your apology has been recorded. Does it sound good?</p>
 
 		<div class='apology-prbar'>
 			<div class='prbar' style='width:{{ prBarWidth }}%'></div>
@@ -29,7 +28,7 @@
 		</div>
 		<center>
         <p style="margin-bottom: 30px;">
-          If you like it, choose personal<br/>contacts to share with.  
+          If you like it, choose who<br/>to share with.  
         </p>
         </center>    
 		<div ng-click="chooseRecipient()" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;text-transform: uppercase;">Choose recipient</div>
