--- a/www/core/views/aftersent.client.view.html
+++ b/www/core/views/aftersent.client.view.html
@@ -3,7 +3,7 @@
 		<p class='apology-header'>apology sent!</p>
 		<div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">tune into apology radio</div>
 		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">Record another apology</div>
-        <div ng-click="goTo('/launch')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">home</div>
+        <div ng-click="goTo('/')" style="margin: auto;border-color: white;border-width: 2px;border-style: solid;border-radius: 30px;text-align: center;padding: 7px;max-width: 200px;margin-top: 30px; text-transform: uppercase;">home</div>
 		<div ng-click="share()" class='apology-footer'>
             SHARE APP
         </div>
