--- a/www/core/views/player.client.view.html
+++ b/www/core/views/player.client.view.html
@@ -1,7 +1,7 @@
 <section>
     <div class='main-window' style="padding-top: 40px;">
         
-        <div class='goback-to-record' style="margin-right: 30px;" ng-click="player.goTo('launch')"><</div>
+        <div class='goback-to-record' style="margin-right: 30px;" ng-click="player.goTo('home')"><</div>
             
         <div style="padding-bottom: 35px;padding-top: 10px;text-align: center;">
             <img src="./core/img/Apology.gif" width="250px" />
