--- a/www/core/views/launch.client.view.html
+++ b/www/core/views/launch.client.view.html
@@ -13,7 +13,7 @@
                 <img src="./core/img/Apology.gif" width="250px" />
             </div>
             
-            <p class='apology-title g-font b' style="text-align:left;padding-bottom: 10px; width: 60%;font-size: 24px;text-shadow: -1px 1px 12px rgba(255, 255, 255, 0.4);">
+            <p class='apology-title g-font b' style="text-align:left;padding-bottom: 0px; width: 60%;font-size: 24px;text-shadow: -1px 1px 12px rgba(255, 255, 255, 0.4);">
             <!--
             <img src="./core/img/listen-text.png" />
             -->
@@ -34,7 +34,7 @@
             </div>
         -->
             
-            <div class='review-button-cont' style="margin-top: 30px;margin-bottom: 8%;">
+            <div class='review-button-cont' style="margin-top: 4%;margin-bottom: 8%;">
                 <div ng-show='launch.isPlaying' ng-click='launch.pause()' class='pause-button'>
                     <img class="listen-button pause" src="./core/img/pause.png" alt="">
                 </div>
