--- a/www/core/views/reviewapology.client.view.html
+++ b/www/core/views/reviewapology.client.view.html
@@ -18,7 +18,7 @@
 			Your browser does not support the audio element.
 		</audio> -->		
 
-		<div class='review-button-cont'>
+		<div class='review-button-cont' style="margin-top:4%;margin-bottom:4%">
 			<div ng-show='apologyStarted&&!apologyPaused' ng-click='stopMedia()' class='pause-button'>
 				<img src="./core/img/pause.png" alt="">
 			</div>
