--- a/platforms/ios/www/core/views/home.client.view.html
+++ b/platforms/ios/www/core/views/home.client.view.html
@@ -4,7 +4,7 @@
     	<div class='goback-to-record' ng-click="goTo('/')"><span class="arrow"><</span></div>
     	<p class='apology-header g-font b page-title'>{{ apologyHeader }}</p>
     	<div style="margin-top: 10px;margin-bottom: 20px;text-align: center;" ng-show='!apologyStarted'><img src="./core/img/log.png" style="width: 60px;" /></div>
-		<p class='main-page-text a-font' ng-show='!apologyStarted' style="padding-left: 50px;padding-right: 50px; font-size: 17px">Think about who you want to apologize to, then tap the record button and we will guide you through a sensational apology.<br><br>Say the prompts as they appear followed by your own words.</p>
+		<p class='main-page-text a-font' ng-show='!apologyStarted' style="padding-left: 20px;padding-right: 20px; font-size: 17px">Think about who you want to apologize to, then tap the record button and we will guide you through a sensational apology.<br><br>Say the prompts as they appear followed by your own words.</p>
 
 		<p class='apology-title' ng-show='apologyStarted'>{{ apologyTitle }}</p>
 
@@ -16,9 +16,9 @@
 			<p class='time-remaining' ng-show='stopRecord'>-30</p>	
 		</div>
 
-		<div class='record-button-cont'>
+		<div class='record-button-cont' ng-hide='!apologyUploading&&apologyStarted&&!apologyPaused'>
 			<div ng-show='!apologyStarted' ng-click='startApology()' class='record-button'></div>
-			<div ng-show='!apologyUploading&&apologyStarted&&!apologyPaused' ng-click='stopRecording()' class='stop-button'></div>
+
 			<div ng-show='apologyUploading' class='apology-uploading'></div>
 
 <!-- 			<div ng-show='apologyStarted&&!apologyPaused' ng-click='pauseMedia()' class='pause-button'>
@@ -28,6 +28,9 @@
 				<img src="./core/img/play.png" alt="">
 			</div> -->
 			
+		</div>
+		<div class='recording-button-cont' ng-show='!apologyUploading&&apologyStarted&&!apologyPaused'>
+			<div class='record-button'></div>
 		</div>
 		<div class='apology-footer g-font b' ng-click="goTo('/radio')" ng-show='!apologyStarted'>
             TUNE INTO APOLOGY.FM <img src="./core/img/phones.png" style="width: 20px;vertical-align: inherit; margin-left: 15px" />
